Add a to_character.data.frame method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ S3method(tagged_na_to_regular_na,double)
 S3method(tagged_na_to_user_na,data.frame)
 S3method(tagged_na_to_user_na,default)
 S3method(tagged_na_to_user_na,double)
+S3method(to_character,data.frame)
 S3method(to_character,default)
 S3method(to_character,double)
 S3method(to_character,haven_labelled)
